# fly-light

./: FS_DEV.md  GO_NOTES.md  LICENSE  README.md
ex_scratch/: .gitignore  README.md  mix.exs
ex_scratch/lib/: ex_scratch.ex
ex_scratch/lib/ex_scratch/: application.ex
ex_scratch/lib/exercises/: go_tour.ex
ex_scratch/test/: ex_scratch_test.exs
fly-cli/: .gitignore  go.mod
fly-cli/cmd/fly-cli/: Makefile  main.go
fly-proxy/: .gitignore  Cargo.toml  PROXY_RESPONSIBILITIES.md  README.md
fly-proxy/src/: lib.rs  main.rs
fly-proxy/src/handlers/: launch.rs  mod.rs  regions.rs
fly-proxy/src/models/: mod.rs
fly-proxy/src/services/: fly_kv.rs  mod.rs
fly_dash/: .gitignore  README.md  mix.exs
fly_dash/assets/css/: app.css
fly_dash/assets/js/: app.js
fly_dash/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
fly_dash/lib/: fly_dash.ex  fly_dash_web.ex
fly_dash/lib/fly_dash/: application.ex  client.ex  kv_subscriber.ex  mailer.ex  repo.ex  utility.ex
fly_dash/priv/repo/: seeds.exs
fly_dash/test/: test_helper.exs
fly_global/: .gitignore  CODE_ORGANIZATION.md  README.md  mix.exs
fly_global/config/: config.exs  dev.exs  runtime.exs  test.exs
fly_global/lib/: fly_global.ex  fly_global_web.ex
fly_kv/: .gitignore  README.md  mix.exs  scratch.md
fly_kv/config/: config.exs  dev.exs  runtime.exs  test.exs
fly_kv/lib/: fly_kv.ex  fly_kv_web.ex
flyctl/: .gitignore  go.mod
go-scratch/: .gitignore  GO_NOTES.md  Makefile  README.md  glossary.md  go.mod  main.go
postgres/: docker-compose.yaml
rust-scratch/: README.md  glossary.md
(+85 files in other folders)
