[package]
name = "fly-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.23", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
warp = {version = "0.4.2", features = ["server"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
